# prometheus-remote-write-client

./: .gitignore  README.md  __init__.py  pyproject.toml  remote_write_client.py  requirements.txt
prometheus_remote_write_client/: __init__.py  remote_write_client.py
tests/: test_remote_write_client.py
